--- a/database/README
+++ b/database/README
@@ -1,6 +1,7 @@
 # DATABASE puppetversions creation and table structure
 mysql> create database puppetversions
 mysql> use puppetversions;
+
 CREATE TABLE `main` (
   `Id` mediumint(15) unsigned NOT NULL AUTO_INCREMENT,
   `Server` varchar(250) NOT NULL,
@@ -15,13 +16,26 @@ CREATE TABLE `main` (
   KEY `Product` (`Product`)
 ) ENGINE=InnoDB DEFAULT CHARSET=latin1;
 
+
+CREATE TABLE `owners` (
+  `Id` mediumint(15) unsigned NOT NULL AUTO_INCREMENT,
+  `Server` varchar(250) NOT NULL,
+  `Owner` varchar(250) NOT NULL,
+  `Date` timestamp NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
+  PRIMARY KEY (`Id`),
+  UNIQUE KEY `Uniq` (`Server`),
+  KEY `Server` (`Server`),
+  KEY `Owner` (`Owner`)
+) ENGINE=InnoDB AUTO_INCREMENT=1769 DEFAULT CHARSET=latin1;
+
+
 # Sample records
 mysql> insert into main VALUES ('1','rrad3c50.domain.eu','openssl','1.0.1f','42.el6_7.4',NOW(),'Manual insert');
 mysql> insert into main VALUES ('2','rrad3c50.domain.eu','glibc','2.12','1.166.el6_7.7',NOW(),'Manual insert');
 
 # GRANT ACCESS TO WEB SERVER. web server != database server
 mysql> use mysql;
-mysql> GRANT SELECT, INSERT, UPDATE ON puppetversions.* TO 'puppetversions'@'nvd.sec.domain.com' IDENTIFIED BY 'PASSWORD_HERE';
+mysql> GRANT SELECT, INSERT, UPDATE ON puppetversions.* TO 'puppetversions'@'webserver.sec.domain.com' IDENTIFIED BY 'PASSWORD_HERE';
 mysql> FLUSH PRIVILEGES;
-mysql> SHOW GRANTS FOR 'puppetversions'@'nvd.sec.domain.com';
+mysql> SHOW GRANTS FOR 'puppetversions'@'webserver.sec.domain.com';
 
