ADD mysql events for DB cleanup of old entries

--- a/database/README
+++ b/database/README
@@ -39,3 +39,8 @@ mysql> GRANT SELECT, INSERT, UPDATE ON puppetversions.* TO 'puppetversions'@'web
 mysql> FLUSH PRIVILEGES;
 mysql> SHOW GRANTS FOR 'puppetversions'@'webserver.sec.domain.com';
 
+
+# Cleanup old records via mysql events. Must have event_scheduler = 1 set in /etc/my.cnf
+mysql> CREATE EVENT cleanup_main   ON SCHEDULE EVERY 6 HOUR DO DELETE FROM main   WHERE Date < NOW() - INTERVAL 2 DAY;                                                       
+mysql> CREATE EVENT cleanup_owners ON SCHEDULE EVERY 6 HOUR DO DELETE FROM owners WHERE Date < NOW() - INTERVAL 2 DAY;                                                   
+
